Version 1.0.5
Date : Not released
Database update : No for version >= 1.0.2
Migration path : from version > 1.0.0

Upgrade notes
=============

API is now the default for object queries. A new permission must be added for api user : 'objects/query/hostgroup' 

BUGS
====
1) 


ENHANCEMENTS
============
1) Added comments and categories for handlers, redesigned handler list table (issue # 43)
2) Added real host IP detection in forwarded traps using snmpTrapAddress (or custom one) (issue #41)
3) Added handler cloning (issue #44)
4) Added API

-------------------------------------------------------------------------------------------------
Version 1.0.4b/c
Date : 06-07 Jul 2020
Database update : No for version >= 1.0.2
Migration path : from version > 1.0.0

BUGS
====
1) Hostgroup defined rules didn't work because of IDO not configured when API was.

-------------------------------------------------------------------------------------------------
Version 1.0.4
Date : 06 Jun 2020
Database update : No for version >= 1.0.2
Migration path : from version > 1.0.0

BUGS
====
1) Updated snmptrapd detection in config / installer (pr #34 & #35 by robdevops)


ENHANCEMENTS
============
1) Changed the php detection for install script (issues #30 & #31)
2) SELinux support (pr #37 by robdevops)

-------------------------------------------------------------------------------------------------

Version 1.0.3
Date : 11 Feb 2020
Database update : No for version >= 1.0.2
Migration path : from version > 1.0.0

UPGRADE NOTES : 
Lots of code splitting to have a better code, added continuous integration tests.

BUGS
====
1) Performance data was transfered in display when using API (issue#22)


ENHANCEMENTS
============
1) Added negative numbers evaluation in rules.
2) More precise error on MIB upload errors (issue#21)
3) Added plugins support : function
4) Added regexp for OID selection in rules and display in GUI
